# dependency-injector-grpc-example

./: .editorconfig  .env.example  .gitignore  .lefthook.yaml  Makefile  README.md  pyproject.toml
certs/: Makefile  README.md
certs/cnf/: ca.cnf  client.cnf
organizer/note/v1/: note_service.proto  note_service_pb2.py  note_service_pb2.pyi  note_service_pb2_grpc.py
src/: __init__.py
src/base/: channel.py
src/base/config/: __init__.py  client.py  server.py
src/client/: __init__.py  __main__.py  client.py  config.py
